--- a/sainsmart-st7735-microsd-overlay.dts
+++ b/sainsmart-st7735-microsd-overlay.dts
@@ -2,30 +2,16 @@
 /plugin/;
 
 / {
-    compatible = "brcm,bcm2835", "brcm,bcm2708", "brcm,bcm2709";
+    compatible = "brcm,bcm2835";
 
     fragment@0 {
-        target = <&spi0>;
-        __overlay__ {
-            status = "okay";
-        };
-    };
-
-    fragment@1 {
         target = <&spidev0>;
         __overlay__ {
             status = "disabled";
         };
     };
 
-    fragment@2 {
-        target = <&spidev1>;
-        __overlay__ {
-            status = "disabled";
-        };
-    };
-
-    fragment@3 {
+    fragment@1 {
         target = <&spi0>;
         __overlay__ {
             #address-cells = <1>;
@@ -33,45 +19,28 @@
             status = "okay";
 
             /* ST7735 device on SPI0 using hardware CS (CE0) */
-            st7735@0 {
-                compatible = "sitronix,st7735r";
+            st7735: st7735@0 {
+                compatible = "fbtft,adafruit18";
                 reg = <0>; /* CE0 */
-                spi-max-frequency = <32000000>;
-
-                /* panel geometry (adjust if your module is different) */
-                width = <128>;
+                pinctrl-names = "default";
+                spi-max-frequency = <40000000>;
+                rotate = <90>;
+                buswidth = <8>;
+                fps = <50>;
                 height = <160>;
-                x-offset = <0>;
-                y-offset = <0>;
-
-                /* common init values (tune if needed) */
-                madctl = <0xc0>;
-                colmod = <0x05>;
-
-                /* control GPIOs (BCM numbers) */
-                reset-gpios = <&gpio 25 0>; /* PIN22 */
+                width = <128>;
+                reset-gpios = <&gpio 25 1>; /* PIN22 */
                 dc-gpios    = <&gpio 24 0>; /* PIN18 */
-
-                /* Using hardware CS (CE0) so no cs-gpios specified */
-
-                status = "okay";
-            };
-
-            /* Placeholder for microSD on CE1 (disabled by default) */
-            mmc_spi@1 {
-                compatible = "mmc-spi";
-                reg = <1>; /* CE1 (GPIO7 pin26) */
-                spi-max-frequency = <20000000>;
-                status = "disabled";
+                debug = <0>;
             };
         };
     };
 
     __overrides__ {
-        speed     = <&st7735>,"spi-max-frequency:0";
-        width     = <&st7735>,"width:0";
-        height    = <&st7735>,"height:0";
-        dc_pin    = <&st7735>,"dc-gpios:4";
-        reset_pin = <&st7735>,"reset-gpios:4";
+        green  = <&st7735>,"compatible=fbtft,adafruit18_green";
+        speed  = <&st7735>,"spi-max-frequency:0";
+        rotate = <&st7735>,"rotate:0";
+        fps    = <&st7735>,"fps:0";
+        bgr    = <&st7735>,"bgr:0";
     };
 };
